KUDU-1437. Properly handle negative values in RLE-encoded signed int blocks

This fixes a bug where we didn't properly handle signed integers when writing
RLE-encoded blocks. The issue is that the signed ints were being sign-extended
up to 64 bits, so the high bits were all set to 1. We didn't properly mask off
these '1' bits before writing into the output.

After changing the tests to cover negative values, this reproduced easily.

I also removed some crufty test code for RLE-encoded blocks which ended up
duplicating the type-parameterized 'TestRoundTrip' test case.

Change-Id: I64c8a2944689b4ae8f4cdb105a9dc3f8183d358f
Reviewed-on: http://gerrit.cloudera.org:8080/2954
Tested-by: Kudu Jenkins
Reviewed-by: Adar Dembo <adar@cloudera.com>